--- a/WebSite1/StyleSheet.css
+++ b/WebSite1/StyleSheet.css
@@ -1,4 +1,4 @@
-﻿html {
+﻿html{
     /*Background scaling (will probably have to play around with*/
     background: url(http://www.spriteland.com/sprites/downloads/green-forest-and-hills-background_PNG.png) no-repeat center center fixed;
     background-size: 100%;
@@ -6,23 +6,15 @@
     -moz-background-size: 100%;
     -o-background-size: 100%;
 }
-@font-face {
+@font-face{
     font-family: ringbearer;
     src: url("RINGM_");
 }
 @font-face{
-    font-family: dornen;
-    src: url("Dornen");
+    font-family: diagoth;
+    src: url("diagoth")
 }
-h1 {
-    position: fixed;
-    left: 800px;
-    top: 200px;
-    font-family: ringbearer;
-    font-size: 70px;
-    font-weight: bold;
-}
-button {
+.button-3d {
     width: 300px;
     height: 100px;
     position: fixed;
@@ -31,15 +23,42 @@ button {
     right: 0;
     top: 0;
     bottom: 0;
-    border-color: black;
+    color: black;
+    font-family: ringbearer;
+    font-size: 80px;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 5px;
+    border: solid 1px #f39c12;
     background-color: gold;
     text-align: center;
-    text-transform: uppercase;
-    font-family: ringbearer;
-    font-weight: bold;
-    font-size: 48px;
+    padding: 16px 18px 14px;
+    -webkit-transition: all 0.1s;
+    -moz-transition: all 0.1s;
+    transition: all 0.1s;
+    -webkit-box-shadow: 0px 6px 0px #d35400;
+    -moz-box-shadow: 0px 6px 0px #d35400;
+    box-shadow: 0px 6px 0px #d35400;
 }
-h2 {
+.button-3d:active {
+    -webkit-box-shadow: 0px 2px 0px #d35400;
+    -moz-box-shadow: 0px 2px 0px #d35400;
+    box-shadow: 0px 2px 0px #d35400;
+    position: fixed;
+    top: 4px;
+}
+h1 {
+    position: fixed;
+    left: 660px;
+    top: 200px;
+    font-family: ringbearer;
+    font-size: 70px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-shadow: 0 0 3px #FF0000;
+}
+h2{
     position: fixed;
     left: 850px;
     top: 550px;
@@ -47,7 +66,7 @@ h2 {
     font-family: ringbearer;
     font-size: 32px;
 }
-ul {
+ul{
     position: fixed;
     left: 840px;
     top: 590px;
