--- a/WebSite1/StyleSheet.css
+++ b/WebSite1/StyleSheet.css
@@ -14,7 +14,7 @@
     font-family: diagoth;
     src: url("diagoth")
 }
-.button-3d {
+button {
     width: 300px;
     height: 100px;
     position: fixed;
@@ -41,7 +41,7 @@
     -moz-box-shadow: 0px 6px 0px #d35400;
     box-shadow: 0px 6px 0px #d35400;
 }
-.button-3d:active {
+button:active {
     -webkit-box-shadow: 0px 2px 0px #d35400;
     -moz-box-shadow: 0px 2px 0px #d35400;
     box-shadow: 0px 2px 0px #d35400;
@@ -74,3 +74,39 @@ ul{
     font-family: ringbearer;
     font-size: 30px;
 }
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    padding-top: 100px; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+}
+
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
