--- a/WebSite1/StyleSheet.css
+++ b/WebSite1/StyleSheet.css
@@ -1,4 +1,4 @@
-﻿html {
+﻿html{
     /*Background scaling (will probably have to play around with*/
     position: relative;
     background-image: url("http://www.spriteland.com/sprites/downloads/green-forest-and-hills-background_PNG.png");
@@ -13,7 +13,36 @@
     font-family: diagoth;
     src: url("diagoth")
 }
-button {
+h1{
+    position: relative;
+    left: 460px;
+    font-family: ringbearer;
+    font-size: 70px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-shadow: 0 0 3px #FF0000;
+}
+h2{
+    position: relative;
+    top: 250px;
+    left: 650px;
+    line-height: 100%;
+    font-family: ringbearer;
+    font-size: 32px;
+}
+
+ul{
+    position: relative;
+    top: 180px;
+    left: 640px;
+    line-height: 100%;
+    font-family: ringbearer;
+    font-size: 30px;
+}
+#characterCanvas{
+    display: block;
+}
+#startButton{
     width: 300px;
     height: 100px;
     position: fixed;
@@ -40,71 +69,74 @@ button {
     -moz-box-shadow: 0px 6px 0px #d35400;
     box-shadow: 0px 6px 0px #d35400;
 }
-button:active {
+#startButton:active{
     -webkit-box-shadow: 0px 2px 0px #d35400;
     -moz-box-shadow: 0px 2px 0px #d35400;
     box-shadow: 0px 2px 0px #d35400;
     position: fixed;
     top: 4px;
 }
-h1 {
-    position: relative;
-    left: 460px;
-    font-family: ringbearer;
-    font-size: 70px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-shadow: 0 0 3px #FF0000;
-}
-h2{
-    position: relative;
-    top: 250px;
-    left: 650px;
-    line-height: 100%;
-    font-family: ringbearer;
-    font-size: 32px;
-}
-ul{
-    position: relative;
-    top: 180px;
-    left: 640px;
-    line-height: 100%;
+#characterButtons{
+    width: 150px;
+    height: 100px;
+    display: inline-block;
+    color: black;
     font-family: ringbearer;
     font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 5px;
+    border: solid 1px #f39c12;
+    background-color: gold;
+    text-align: center;
+    padding: 16px 18px 14px;
+    -webkit-transition: all 0.1s;
+    -moz-transition: all 0.1s;
+    transition: all 0.1s;
+    -webkit-box-shadow: 0px 6px 0px #d35400;
+    -moz-box-shadow: 0px 6px 0px #d35400;
+    box-shadow: 0px 6px 0px #d35400;
 }
-.modal {
-    display: none; 
+.tank:active,
+.wizard:active,
+.elf:active{
+    -webkit-box-shadow: 0px 2px 0px #d35400;
+    -moz-box-shadow: 0px 2px 0px #d35400;
+    box-shadow: 0px 2px 0px #d35400;
+    position: relative;
+    top: 4px;
+}
+    .popUpWindow{
+    display: none;
     position: fixed;
-    z-index: 1; 
-    padding-top: 100px; 
+    z-index: 1;
+    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0); 
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
-
-
-.modal-content {
+.popUpWindow-content{
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
 }
-
-.close {
+.close{
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-    .close:hover,
-    .close:focus {
-        color: #000;
-        text-decoration: none;
-        cursor: pointer;
-    }
+.close:hover,
+.close:focus{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
