Cleaned up the createCharacter method and createLandscape method. Placed them in a createCanvas method for cleaner code purposes. -Dusitn

--- a/WebSite1/StyleSheet.css
+++ b/WebSite1/StyleSheet.css
@@ -40,7 +40,10 @@ ul{
     font-family: ringbearer;
     font-size: 30px;
 }
-#characterCanvas{
+#landscapeCanvas {
+
+}
+#characterCanvas {
     display: block;
 }
 #startButton{
