Made changes to character class. Erased all the get/set methods. We can deal with those later, instead focused the page to creating the canvas and displaying the landscape and character images. Currently have the character sprite displaying, however, it's huge. Will work on the size in next commit. -Dustin

--- a/WebSite1/StyleSheet.css
+++ b/WebSite1/StyleSheet.css
@@ -34,17 +34,15 @@ h2{
 
 ul{
     position: relative;
-    top: 180px;
+    top: 200px;
     left: 640px;
     line-height: 100%;
     font-family: ringbearer;
     font-size: 30px;
 }
-#landscapeCanvas {
-
-}
-#characterCanvas {
-    display: block;
+#gameCanvas {
+    position: relative;
+    display: none;
 }
 #startButton{
     width: 300px;
