--- a/WebSite1/StyleSheetV2.css
+++ b/WebSite1/StyleSheetV2.css
@@ -1,21 +1,23 @@
-﻿
-html{
+﻿html {
     /*Background scaling (will probably have to play around with*/
     position: relative;
     background-image: url("http://www.spriteland.com/sprites/downloads/green-forest-and-hills-background_PNG.png");
     background-repeat: no-repeat;
     background-size: 100% 100vh;
 }
-@font-face{
+
+@font-face {
     font-family: ringbearer;
     src: url("RINGM_");
 }
-@font-face{
+
+@font-face {
     font-family: diagoth;
     src: url("diagoth");
 }
-h1{
-    position: relative;
+
+h1 {
+    position: fixed;
     left: 460px;
     font-family: ringbearer;
     font-size: 50px;
@@ -23,28 +25,31 @@ h1{
     text-transform: uppercase;
     text-shadow: 0 0 3px #FF0000;
 }
-h2{
-    position: relative;
-    top: 250px;
-    left: 650px;
+
+h2 {
+    position: fixed;
+    top: 300px;
+    left: 200px;
     line-height: 100%;
     font-family: ringbearer;
     font-size: 32px;
 }
 
-ul{
-    position: relative;
-    top: 200px;
-    left: 640px;
+ul {
+    position: fixed;
+    top: 100px;
+    left: 300px;
     line-height: 100%;
     font-family: ringbearer;
     font-size: 30px;
 }
+
 #gameCanvas {
     position: relative;
     display: none;
 }
-#startButton{
+
+#startButton {
     width: 300px;
     height: 100px;
     position: fixed;
@@ -71,13 +76,15 @@ ul{
     -moz-box-shadow: 0px 6px 0px #d35400;
     box-shadow: 0px 6px 0px #d35400;
 }
-#startButton:active{
-    -webkit-box-shadow: 0px 2px 0px #d35400;
-    -moz-box-shadow: 0px 2px 0px #d35400;
-    box-shadow: 0px 2px 0px #d35400;
-    position: fixed;
-    top: 4px;
-}
+
+    #startButton:active {
+        -webkit-box-shadow: 0px 2px 0px #d35400;
+        -moz-box-shadow: 0px 2px 0px #d35400;
+        box-shadow: 0px 2px 0px #d35400;
+        position: fixed;
+        top: 4px;
+    }
+
 .tank,
 .wizard,
 .elf {
@@ -102,16 +109,18 @@ ul{
     -moz-box-shadow: 0px 6px 0px #d35400;
     box-shadow: 0px 6px 0px #d35400;
 }
-.tank:active,
-.wizard:active,
-.elf:active{
-    -webkit-box-shadow: 0px 2px 0px #d35400;
-    -moz-box-shadow: 0px 2px 0px #d35400;
-    box-shadow: 0px 2px 0px #d35400;
-    position: relative;
-    top: 4px;
-}
-.popUpWindow{
+
+    .tank:active,
+    .wizard:active,
+    .elf:active {
+        -webkit-box-shadow: 0px 2px 0px #d35400;
+        -moz-box-shadow: 0px 2px 0px #d35400;
+        box-shadow: 0px 2px 0px #d35400;
+        position: relative;
+        top: 4px;
+    }
+
+.popUpWindow {
     display: none;
     position: fixed;
     z-index: 1;
@@ -124,23 +133,25 @@ ul{
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 }
-.popUpWindow-content{
+
+.popUpWindow-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
 }
-.close{
+
+.close {
     color: #aaaaaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus{
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }
