--- a/WebSite1/StyleSheetV2.css
+++ b/WebSite1/StyleSheetV2.css
@@ -19,7 +19,7 @@
 h1 {
     position: static;
     left: 460px;
-    //text-align: center;
+    text-align: center;
     font-family: ringbearer;
     font-size: 55px;
     font-weight: bold;
@@ -43,7 +43,7 @@ ul {
     line-height: 100%;
     font-family: ringbearer;
     font-size: 28px;
-    font-weight:normal;
+    font-weight: normal;
 }
 
 #gameCanvas {
@@ -86,9 +86,9 @@ ul {
         top: 4px;
     }
 
-.tank,
-.wizard,
-.elf {
+#tank,
+#wizard,
+#elf {
     width: 150px;
     height: 100px;
     display: inline-block;
@@ -111,9 +111,9 @@ ul {
     box-shadow: 0px 6px 0px #d35400;
 }
 
-    .tank:active,
-    .wizard:active,
-    .elf:active {
+    #tank:active,
+    #wizard:active,
+    #elf:active {
         -webkit-box-shadow: 0px 2px 0px #d35400;
         -moz-box-shadow: 0px 2px 0px #d35400;
         box-shadow: 0px 2px 0px #d35400;
