Worked on a base model for the math and logic that goes into the combat system (work in progress), tried to make a battle guide (text that guides player through combat), and finally changed the tank button to display "Knight" instead to keep consistency in the names of our characters.-Dustin

--- a/WebSite1/StyleSheetV2.css
+++ b/WebSite1/StyleSheetV2.css
@@ -88,7 +88,7 @@ ul {
         text-align: center;
     }
 
-#tank,
+#knight,
 #wizard,
 #elf {
     width: 150px;
@@ -113,7 +113,7 @@ ul {
     box-shadow: 0px 6px 0px #d35400;
 }
 
-    #tank:active,
+    #knight:active,
     #wizard:active,
     #elf:active {
         -webkit-box-shadow: 0px 2px 0px #d35400;
