--- a/WebSite1/StyleSheetV2.css
+++ b/WebSite1/StyleSheetV2.css
@@ -18,6 +18,7 @@
 
 h1 {
     position: fixed;
+    top: 0px;
     left: 29%;
     text-align: center;
     font-family: ringbearer;
@@ -30,7 +31,7 @@ h1 {
 h2 {
     position: fixed;
     text-align: center;
-    top: 350px;
+    bottom: 120px;
     left: 40%;
     line-height: 100%;
     font-family: ringbearer;
@@ -40,7 +41,7 @@ h2 {
 ul {
     position: fixed;
     text-align: center;
-    top: 380px;
+    bottom: 0px;
     left: 40%;
     line-height: 100%;
     font-family: ringbearer;
@@ -57,7 +58,7 @@ ul {
     height: 100px;
     position: fixed;
     left: 37%;
-    top: 200px;
+    top: 40%;
     color: black;
     z-index: -1;
     font-family: ringbearer;
@@ -84,7 +85,7 @@ ul {
         box-shadow: 0px 2px 0px #d35400;
         position: fixed;
         left: 37%;
-        top: 200px;
+        top: 40%;
         text-align: center;
     }
 
@@ -125,11 +126,11 @@ ul {
 
 .popUpWindow {
     display: none;
-    position: static;
+    position: fixed;
     z-index: 1;
     padding-top: 100px;
     left: 0;
-    top: 0;
+    top: 15%;
     width: 100%;
     height: 100%;
     overflow: auto;
