Fixed the oversizedness and the text in the healthbar.

--- a/WebSite1/StyleSheetV2.css
+++ b/WebSite1/StyleSheetV2.css
@@ -4,6 +4,7 @@
     background-image: url("http://www.spriteland.com/sprites/downloads/green-forest-and-hills-background_PNG.png");
     background-repeat: no-repeat;
     background-size: 100% 100vh;
+    overflow:hidden;
 }
 
 @font-face {
